rollback add ActiveProcessorCount for java